# CONST-INT

./: .clang-format  .gitignore  .gitlab-ci.yml  .sconsign.dblite  CMakeLists.txt  LICENSE  README.md  SConstruct  \  build.sh  compile_commands.json  extension_registration.cpp  player_ref.gd  run.sh
.github/: FUNDING.yml
.github/workflows/: build.yml
Actors/: Player.cpp  Player.h
CI_DEMO/: Ci Demo.csproj  Ci Demo.sln  Concrete.tres  FPS_Settings.tres  PP_Camera.gdshader  PP_Camera.tres  icon.svg.import  project.godot
Components/: InteractionComponent.cpp  InteractionComponent.h  InventoryComponent.cpp  InventoryComponent.h
Config/: ActorSettings.cpp  ActorSettings.h  InventoryData.cpp  InventoryData.h
Core/: ComponentNode.cpp  ComponentNode.h  InputHandler.cpp  InputHandler.h  itemDatabase.cpp  itemDatabase.h
Core/Data/: InventoryObject.cpp  InventoryObject.h  Item.cpp  Item.h  ItemDatabase.cpp  ItemDatabase.h
Navigation/: AStar3DGrid.cpp  AStar3DGrid.h  AStar3DGridEditorPlugin.cpp  AStar3DGridEditorPlugin.h
demo/: icon.svg.import  main.tscn  project.godot
generators/: generate_csharp_bindings.py
godot/: CONST-INT.gdextension  CONST-INT.gdextension.uid  DebugMenu.gd  Demo.VoxelGI_data.res  Demo.tscn  GroundMovement.tres  JuiceSettings.tres  PlayerTest.gd  PlayerTest.gd.uid  icon.svg.import  project.godot
godot/DemoAssets/: Demo.VoxelGI_data.res  Demo.tscn  HealthStat.tres  HealthTrigger.gd  HealthTrigger.gd.uid
godot/DemoAssets/ExampleScripts/: InteractionTest.gd  InteractionTest.gd.uid
godot/DemoAssets/PlayerDefaults/: AirMoveSettings.tres  BreathPosCurve.tres  BreathRotCurve.tres  DebugMenu.gd  DebugMenu.gd.uid  GroundMoveSettings.tres  JuiceSettings.tres  PlayerDebug.gd
godot/DemoAssets/Shaders/: Grid.gdshader  Grid.gdshader.uid
godot/Resources/Audio/: Step_Concrete.mp3.import  Step_Concrete.wav.import
godot/Resources/Compositor/Color Depth/: CI_PP_ColorDepth.gd  CI_PP_ColorDepth.gd.uid  CI_PP_ColorDepth.glsl  CI_PP_ColorDepth.glsl.import
godot/Resources/Compositor/Dither/: CI_PP_Dither.gd  CI_PP_Dither.gd.uid  CI_PP_Dither.glsl  CI_PP_Dither.glsl.import
godot/Resources/Compositor/PSX/: psx.gd  psx.gd.uid  psx.glsl  psx.glsl.import
godot/Resources/Compositor/Pixelation/: CI_PP_Pixelation.gd  CI_PP_Pixelation.gd.uid  CI_PP_Pixelation.glsl.import
godot/Resources/NodeIcons/: InteractionComponent.svg.import  Player.svg.import  Settings.svg.import  StatComponent.svg.import
project/: icon.svg.import  node_3d.tscn  project.godot
project/addons/CONST-INT/Assets/Compositor/Color Depth/: CI_PP_ColorDepth.gd  CI_PP_ColorDepth.glsl  CI_PP_ColorDepth.glsl.import
project/addons/CONST-INT/Assets/Compositor/Dither/: CI_PP_Dither.gd  CI_PP_Dither.glsl.import
project/addons/CONST-INT/Assets/Compositor/Pixelation/: CI_PP_Pixelation.gd  CI_PP_Pixelation.glsl  CI_PP_Pixelation.glsl.import
project/addons/CONST-INT/Assets/Icons/: InteractionComponent.svg.import  Player.svg.import
project/addons/CONST-INT/Assets/UI/Inventory/: GridSlot.png.import
rust/: Cargo.toml
rust/src/: air_movement_settings.rs  ground_movement_settings.rs  interaction_component.rs  juice_settings.rs  lib.rs  player.rs  stat_component.rs  stat_setting.rs
src/: ActorBase.cpp  ActorBase.h  ActorSettings.cpp  ActorSettings.h  gdexample.cpp  gdexample.h  my_singleton.cpp  register_types.cpp  register_types.h
src/Core/: EngineLayer.cpp  EngineLayer.h
